# evolving-agent-safety

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  run_baseline.sh  run_causal_exp.sh  run_causal_exp_completion_only.sh  run_causal_exp_completion_only_fromscratch.sh  run_frontier_eval.sh  run_inspect_evals.sh  setup_tracker.sh  verify_collected_instruction_eval.sh
data/: agentharm
experiments/: causal_eval.py  eval_frontiers.py
results/logs/: 2025-08-08T13-26-14+01-00_agentharm_oYJwz9mhHSJt6hLFxpj7er.eval  2025-08-10T12-06-15+01-00_agentharm_fCiaya2kqussDPpqmhW7xi.eval  2025-08-10T12-15-28+01-00_agentharm_c7BCVjZPNxL6h4hRu5wGdi.eval
src/: adapter.py  agent.py  evaluation.py  optimization.py
src/causal/: __init__.py  collector.py  effects.py  eval_utils.py  evaluator.py  interventions.py  io_utils.py  optimization.py  pipeline.py  runtime_setup.py  verify_instruction_scores.py
src/config/: __init__.py  config.py  config.yaml  config_benign_completion_gpt4.yaml  config_causal_gpt4.yaml  config_causal_gpt4_completion_only.yaml  config_causal_gpt4_completion_only_fromscratch.yaml  config_causal_gpt4_nec-suf_fromscratch.yaml  config_causal_gpt4_no_necessity.yaml  config_causal_gpt4_suf_fromscratch.yaml  config_causal_gpt4_suf_no-safety.yaml  config_causal_gpt4_suf_no-safety_fromscratch.yaml  config_causal_min.yaml  config_gepa_benign_completion_gemini.yaml  config_gepa_benign_completion_gpt4.yaml  config_gepa_harmful_refusal_gpt4.yaml  config_harmful_completion_gpt4.yaml  config_harmful_refusal_gpt4.yaml  config_min.yaml  test_config.yaml
(+8 files in other folders)
