[project]
name = "evolving-agent-safety"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.0.3",
    "inspect-ai>=0.3.120",
    "mlflow>=3.2.0",
    "pyyaml>=6.0.2",
    "aiohttp>=3.8.0",
    "ipywidgets>=8.1.7",
    "func-timeout>=4.3.5",
    "inspect-evals",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
inspect-evals = { path = "external/inspect_evals", editable = true }
